force-app/main/default/objects/ht_Producer__c/ht_Producer__c.object-meta.xml
<CustomObject>
    <label>NIPR Producer</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Producer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIPR Producers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>