force-app/main/default/objects/ht_Producer__c/fields/ht_BirthDate__c.field-meta.xml
<CustomField>
    <fullName>ht_BirthDate__c</fullName>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>