force-app/main/default/objects/ht_Producer__c/fields/ht_BranchId__c.field-meta.xml
<CustomField>
    <fullName>ht_BranchId__c</fullName>
    <externalId>true</externalId>
    <label>Branch Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>