force-app/main/default/objects/ht_Producer__c/fields/ht_ExcludeCarrierAppointments__c.field-meta.xml
<CustomField>
    <fullName>ht_ExcludeCarrierAppointments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, carrier appointments will be excluded from NIPR sync and this producer will be added to subscriptions that exclude carrier appointments. Can be set automatically for large payloads or manually by users.</description>
    <label>Exclude Carrier Appointments</label>
    <type>Checkbox</type>
</CustomField>