force-app/main/default/objects/ht_Producer__c/fields/ht_FEIN__c.field-meta.xml
<CustomField>
    <fullName>ht_FEIN__c</fullName>
    <label>FEIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>