force-app/main/default/objects/ht_Producer__c/fields/ht_GivenName__c.field-meta.xml
<CustomField>
    <fullName>d4c_GivenName__c</fullName>
    <label>Given Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>