force-app/main/default/objects/ht_Producer__c/fields/ht_IntegrationError__c.field-meta.xml
<CustomField>
    <fullName>d4c_IntegrationError__c</fullName>
    <label>Integration Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>