force-app/main/default/objects/ht_Producer__c/fields/ht_MiddleName__c.field-meta.xml
<CustomField>
    <fullName>ht_MiddleName__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>