force-app/main/default/objects/ht_Producer__c/fields/ht_NameSuffix__c.field-meta.xml
<CustomField>
    <fullName>ht_NameSuffix__c</fullName>
    <label>Name Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>