force-app/main/default/objects/ht_Producer__c/fields/ht_NameTypeCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_NameTypeCode__c</fullName>
    <label>Name Type Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>