force-app/main/default/objects/ht_Producer__c/fields/ht_NPN__c.field-meta.xml
<CustomField>
    <fullName>d4c_NPN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>NPN</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>