force-app/main/default/objects/ht_Producer__c/fields/ht_NPNStatus__c.field-meta.xml
<CustomField>
    <fullName>ht_NPNStatus__c</fullName>
    <label>NPN Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Invalid NPN</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Sync Disabled</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>