force-app/main/default/objects/ht_Producer__c/fields/ht_NPNSyncError__c.field-meta.xml
<CustomField>
    <fullName>d4c_NPNSyncError__c</fullName>
    <label>NPN Sync Error</label>
    <type>TextArea</type>
</CustomField>