force-app/main/default/objects/ht_Producer__c/fields/ht_OtherGivenName__c.field-meta.xml
<CustomField>
    <fullName>ht_OtherGivenName__c</fullName>
    <label>Other Given Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>