force-app/main/default/objects/ht_Producer__c/fields/ht_SSN__c.field-meta.xml
<CustomField>
    <fullName>d4c_SSN__c</fullName>
    <label>SSN</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>