force-app/main/default/objects/ht_Producer__c/fields/ht_StateCOID__c.field-meta.xml
<CustomField>
    <fullName>ht_StateCOID__c</fullName>
    <label>State CO ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>