force-app/main/default/objects/ht_Producer__c/fields/ht_StateDomicile__c.field-meta.xml
<CustomField>
    <fullName>ht_StateDomicile__c</fullName>
    <label>State Domicile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>