force-app/main/default/objects/ht_Producer__c/fields/ht_StateOrProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>ht_StateOrProvinceCode__c</fullName>
    <label>State Or Province Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>