force-app/main/default/objects/ht_Producer__c/fields/ht_Subscription__c.field-meta.xml
<CustomField>
    <fullName>ht_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>ht_Subscription__c</referenceTo>
    <relationshipName>Producers</relationshipName>
    <type>Lookup</type>
</CustomField>