force-app/main/default/objects/ht_Producer__c/fields/ht_SurName__c.field-meta.xml
<CustomField>
    <fullName>ht_SurName__c</fullName>
    <label>Sur Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>