force-app/main/default/objects/ht_Producer__c/fields/ht_SyncRecordToNIPR__c.field-meta.xml
<CustomField>
    <fullName>d4c_SyncRecordToNIPR__c</fullName>
    <label>Sync Record To NIPR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
                <default>true</default>
                <label>On</label>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>