force-app/main/default/objects/ht_Producer__c/fields/ht_Type__c.field-meta.xml
<CustomField>
    <fullName>ht_Type__c</fullName>
    <description>Represents the type of the Producer record.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>