force-app/main/default/objects/ht_Producer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ht_FullName__c</columns>
    <columns>ht_GivenName__c</columns>
    <columns>ht_SurName__c</columns>
    <columns>ht_NPN__c</columns>
    <columns>ht_NPNStatus__c</columns>
    <columns>ht_NPNSyncError__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>